# desclop

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  package-lock.json  package.json
.github/workflows/: ci.yml  quality-gate.yml  release.yml
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/desktop/scripts/: run-vitest.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/migrations/: 001_init.sql
apps/desktop/src-tauri/src/: app_state.rs  db.rs  domain.rs  errors.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: entitlements.rs  export_import.rs  git.rs  inbox.rs  mod.rs  notes.rs  plans.rs  projects.rs  resume.rs  tasks.rs  work_entries.rs
apps/desktop/src-tauri/src/repositories/: entitlements.rs  inbox.rs  mod.rs  notes.rs  plans.rs  projects.rs  tasks.rs  work_entries.rs
apps/desktop/src-tauri/src/services/: commit_linker.rs  git_adapter.rs  mod.rs  portable_bundle.rs  resume.rs
apps/desktop/src/app/: App.test.tsx  App.tsx  routes.tsx  test-utils.tsx
apps/desktop/src/app/shell/: AppShell.test.tsx  AppShell.tsx
apps/desktop/src/features/export-import/: markdownExport.test.ts  markdownExport.ts
apps/desktop/src/features/focus-mode/: FocusMode.test.tsx  FocusMode.tsx  focusTimer.test.ts  focusTimer.ts
apps/desktop/src/features/git/: commitLinking.test.ts  commitLinking.ts
apps/desktop/src/features/inbox/: InboxCapture.test.tsx  InboxCapture.tsx
apps/desktop/src/features/license/: licenseBoundary.test.ts  licenseBoundary.ts
apps/desktop/src/features/markdown-import/: MarkdownImportPreview.test.tsx  MarkdownImportPreview.tsx  markdownParser.test.ts  markdownParser.ts
apps/desktop/src/styles/: base.css
apps/desktop/tests/e2e/: alpha-dogfooding.spec.ts  mvp.spec.ts
docs/: mvp-acceptance.md
docs/superpowers/plans/: 2026-06-16-delete-project.md  2026-06-16-desclop-new-features-and-fixes.md  2026-07-13-first-run-help.md
docs/superpowers/specs/: 2026-07-13-first-run-help-design.md
(+52 files in other folders)
