[package]
name = "desclop-desktop"
version = "0.0.0"
description = "Desclop desktop app"
authors = ["Desclop"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "desclop_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
