[package]
name = "desclop-desktop"
version = "0.1.0-alpha.1"
description = "Desclop desktop app"
authors = ["Desclop"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "desclop_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
git2 = "0.19"
tauri-plugin-dialog = "2"
